@@ -22,7 +22,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.security.test.context.support.WithMockUser;
 
 import de.tum.in.www1.artemis.AbstractSpringIntegrationIndependentTest;
-import de.tum.in.www1.artemis.course.CourseUtilService;
 import de.tum.in.www1.artemis.domain.Course;
 import de.tum.in.www1.artemis.domain.Exercise;
 import de.tum.in.www1.artemis.domain.FileUploadExercise;
@@ -50,14 +49,10 @@ import de.tum.in.www1.artemis.exercise.modeling.ModelingExerciseUtilService;
 import de.tum.in.www1.artemis.exercise.programming.ProgrammingExerciseUtilService;
 import de.tum.in.www1.artemis.exercise.text.TextExerciseUtilService;
 import de.tum.in.www1.artemis.participation.ParticipationUtilService;
-import de.tum.in.www1.artemis.repository.CourseRepository;
 import de.tum.in.www1.artemis.repository.ExamRepository;
-import de.tum.in.www1.artemis.repository.ExerciseRepository;
 import de.tum.in.www1.artemis.repository.ParticipationRepository;
 import de.tum.in.www1.artemis.repository.TutorParticipationRepository;
-import de.tum.in.www1.artemis.repository.UserRepository;
 import de.tum.in.www1.artemis.service.ExerciseService;
-import de.tum.in.www1.artemis.user.UserUtilService;
 import de.tum.in.www1.artemis.util.TestResourceUtils;
 import de.tum.in.www1.artemis.web.rest.dto.ExerciseDetailsDTO;
 import de.tum.in.www1.artemis.web.rest.dto.StatsForDashboardDTO;
@@ -68,34 +63,16 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     private static final String TEST_PREFIX = "exerciseintegration";
 
     @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private ExerciseRepository exerciseRepository;
-
-    @Autowired
     private ExamRepository examRepository;
 
     @Autowired
     private ParticipationRepository participationRepository;
 
     @Autowired
-    private CourseRepository courseRepository;
-
-    @Autowired
     private TutorParticipationRepository tutorParticipationRepo;
 
     @Autowired
     private ExerciseService exerciseService;
-
-    @Autowired
-    private UserUtilService userUtilService;
-
-    @Autowired
-    private CourseUtilService courseUtilService;
-
-    @Autowired
-    private ExerciseUtilService exerciseUtilService;
 
     @Autowired
     private ParticipationUtilService participationUtilService;
@@ -128,7 +105,7 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @WithMockUser(username = TEST_PREFIX + "tutor1", roles = "TA")
     void testGetStatsForExerciseAssessmentDashboardWithSubmissions() throws Exception {
         List<Course> courses = courseUtilService.createCoursesWithExercisesAndLectures(TEST_PREFIX, true, 1);
-        Course course = courses.get(0);
+        Course course = courses.getFirst();
         TextExercise textExercise = exerciseUtilService.getFirstExerciseWithType(course, TextExercise.class);
         List<Submission> submissions = new ArrayList<>();
 
@@ -165,7 +142,7 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         var user = userUtilService.getUserByLogin(TEST_PREFIX + "student1");
         Course course = examUtilService.createCourseWithExamAndExerciseGroupAndExercises(user);
         course = courseRepository.findByIdWithEagerExercisesElseThrow(course.getId());
-        var exam = examRepository.findByCourseId(course.getId()).get(0);
+        var exam = examRepository.findByCourseId(course.getId()).getFirst();
         var textExercise = examRepository.findAllExercisesWithDetailsByExamId(exam.getId()).stream().filter(ex -> ex instanceof TextExercise).findFirst().orElseThrow();
         StatsForDashboardDTO statsForDashboardDTO = request.get("/api/exercises/" + textExercise.getId() + "/stats-for-assessment-dashboard", HttpStatus.OK,
                 StatsForDashboardDTO.class);
@@ -185,7 +162,7 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     void testFilterOutExercisesThatUserShouldNotSee() throws Exception {
         assertThatExceptionOfType(EntityNotFoundException.class)
                 .isThrownBy(() -> exerciseService.findOneWithDetailsForStudents(Long.MAX_VALUE, userUtilService.getUserByLogin(TEST_PREFIX + "student1")));
-        var course = courseUtilService.createCoursesWithExercisesAndLectures(TEST_PREFIX, false, NUMBER_OF_TUTORS).get(0); // the course with exercises
+        var course = courseUtilService.createCoursesWithExercisesAndLectures(TEST_PREFIX, false, NUMBER_OF_TUTORS).getFirst(); // the course with exercises
         var exercises = exerciseRepository.findByCourseIdWithCategories(course.getId());
         var student = userRepository.getUserWithGroupsAndAuthorities(TEST_PREFIX + "student1");
         assertThat(exerciseService.filterOutExercisesThatUserShouldNotSee(Set.of(), student)).isEmpty();
@@ -231,20 +208,14 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
                 assertThat(exerciseServer.getExampleSubmissions()).as("Example submissions not included").isEmpty();
 
                 // Test presence and absence of exercise type specific properties
-                if (exerciseServer instanceof FileUploadExercise fileUploadExercise) {
-                    assertFileUploadExercise(fileUploadExercise, "png", null);
-                }
-                else if (exerciseServer instanceof ModelingExercise modelingExercise) {
-                    assertModelingExercise(modelingExercise, DiagramType.ClassDiagram, null, null);
-                }
-                else if (exerciseServer instanceof ProgrammingExercise programmingExerciseExercise) {
-                    assertProgrammingExercise(programmingExerciseExercise, true, null, null, null, null, null);
-                }
-                else if (exerciseServer instanceof QuizExercise quizExercise) {
-                    assertQuizExercise(quizExercise, 120, 1, null, List.of());
-                }
-                else if (exerciseServer instanceof TextExercise textExercise) {
-                    assertThat(textExercise.getExampleSolution()).as("Sample solution was filtered out").isNull();
+                switch (exerciseServer) {
+                    case FileUploadExercise fileUploadExercise -> assertFileUploadExercise(fileUploadExercise, "png", null);
+                    case ModelingExercise modelingExercise -> assertModelingExercise(modelingExercise, DiagramType.ClassDiagram, null, null);
+                    case ProgrammingExercise programmingExerciseExercise -> assertProgrammingExercise(programmingExerciseExercise, true, null, null, null, null, null);
+                    case QuizExercise quizExercise -> assertQuizExercise(quizExercise, 120, 1, null, List.of());
+                    case TextExercise textExercise -> assertThat(textExercise.getExampleSolution()).as("Sample solution was filtered out").isNull();
+                    default -> {
+                    }
                 }
 
                 // Test that the exercise does not have more than one participation.
@@ -263,16 +234,15 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
                 assertThat(participation.getSubmissions()).as("At most one submission for participation").hasSizeLessThanOrEqualTo(1);
                 Submission submission = participation.getSubmissions().iterator().next();
 
-                if (submission == null) {
-                    continue;
-                }
-                // Test that the correct text submission was filtered.
-                if (submission instanceof TextSubmission textSubmission) {
-                    assertThat(textSubmission.getText()).as("Correct text submission").isEqualTo("text");
-                }
-                // Test that the correct modeling submission was filtered.
-                else if (submission instanceof ModelingSubmission modelingSubmission) {
-                    assertThat(modelingSubmission.getModel()).as("Correct modeling submission").isEqualTo("model2");
+                switch (submission) {
+
+                    // Test that the correct text submission was filtered.
+                    case TextSubmission textSubmission -> assertThat(textSubmission.getText()).as("Correct text submission").isEqualTo("text");
+
+                    // Test that the correct modeling submission was filtered.
+                    case ModelingSubmission modelingSubmission -> assertThat(modelingSubmission.getModel()).as("Correct modeling submission").isEqualTo("model2");
+                    case null, default -> {
+                    }
                 }
             }
         }
@@ -416,15 +386,15 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
 
                 Exercise exerciseForExampleSolution = request.get("/api/exercises/" + exercise.getId() + "/example-solution", HttpStatus.OK, Exercise.class);
                 assertThat(exerciseForExampleSolution.getExampleSolutionPublicationDate()).isBeforeOrEqualTo(now);
-                if (exerciseForExampleSolution instanceof FileUploadExercise fileUploadExercise) {
-                    assertThat(fileUploadExercise.getExampleSolution()).isEqualTo("Example Solution");
-                }
-                else if (exerciseForExampleSolution instanceof ModelingExercise modelingExercise) {
-                    assertThat(modelingExercise.getExampleSolutionModel()).isEqualTo("Example solution model");
-                    assertThat(modelingExercise.getExampleSolutionExplanation()).isEqualTo("Example Solution");
-                }
-                else if (exerciseForExampleSolution instanceof TextExercise textExercise) {
-                    assertThat(textExercise.getExampleSolution()).isEqualTo("Example Solution");
+                switch (exerciseForExampleSolution) {
+                    case FileUploadExercise fileUploadExercise -> assertThat(fileUploadExercise.getExampleSolution()).isEqualTo("Example Solution");
+                    case ModelingExercise modelingExercise -> {
+                        assertThat(modelingExercise.getExampleSolutionModel()).isEqualTo("Example solution model");
+                        assertThat(modelingExercise.getExampleSolutionExplanation()).isEqualTo("Example Solution");
+                    }
+                    case TextExercise textExercise -> assertThat(textExercise.getExampleSolution()).isEqualTo("Example Solution");
+                    default -> {
+                    }
                 }
             }
         }
@@ -437,7 +407,7 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         Course course = examUtilService.createCourseWithExamAndExerciseGroupAndExercises(user);
         Exam exam = course.getExams().stream().findFirst().orElseThrow();
         exam = examRepository.findWithExerciseGroupsAndExercisesByIdOrElseThrow(exam.getId());
-        TextExercise exercise = (TextExercise) exam.getExerciseGroups().get(0).getExercises().stream().findFirst().orElseThrow();
+        TextExercise exercise = (TextExercise) exam.getExerciseGroups().getFirst().getExercises().stream().findFirst().orElseThrow();
         request.get("/api/exercises/" + exercise.getId() + "/example-solution", HttpStatus.FORBIDDEN, Exercise.class);
 
         ZonedDateTime now = ZonedDateTime.now();
@@ -593,18 +563,17 @@ class ExerciseIntegrationTest extends AbstractSpringIntegrationIndependentTest {
                 assertThat(exerciseForAssessmentDashboard.getDifficulty()).as("Difficulty was set correctly").isEqualTo(DifficultyLevel.MEDIUM);
 
                 // Test presence of exercise type specific properties
-                if (exerciseForAssessmentDashboard instanceof FileUploadExercise fileUploadExercise) {
-                    assertThat(fileUploadExercise.getFilePattern()).as("File pattern was set correctly").isEqualTo("png");
-                }
-                else if (exerciseForAssessmentDashboard instanceof ModelingExercise modelingExercise) {
-                    assertThat(modelingExercise.getDiagramType()).as("Diagram type was set correctly").isEqualTo(DiagramType.ClassDiagram);
-                }
-                else if (exerciseForAssessmentDashboard instanceof ProgrammingExercise programmingExerciseExercise) {
-                    assertThat(programmingExerciseExercise.getProjectKey()).as("Project key was set").isNotNull();
-                }
-                else if (exerciseForAssessmentDashboard instanceof QuizExercise quizExercise) {
-                    assertThat(quizExercise.getDuration()).as("Duration was set correctly").isEqualTo(120);
-                    assertThat(quizExercise.getAllowedNumberOfAttempts()).as("Allowed number of attempts was set correctly").isEqualTo(1);
+                switch (exerciseForAssessmentDashboard) {
+                    case FileUploadExercise fileUploadExercise -> assertThat(fileUploadExercise.getFilePattern()).as("File pattern was set correctly").isEqualTo("png");
+                    case ModelingExercise modelingExercise ->
+                        assertThat(modelingExercise.getDiagramType()).as("Diagram type was set correctly").isEqualTo(DiagramType.ClassDiagram);
+                    case ProgrammingExercise programmingExerciseExercise -> assertThat(programmingExerciseExercise.getProjectKey()).as("Project key was set").isNotNull();
+                    case QuizExercise quizExercise -> {
+                        assertThat(quizExercise.getDuration()).as("Duration was set correctly").isEqualTo(120);
+                        assertThat(quizExercise.getAllowedNumberOfAttempts()).as("Allowed number of attempts was set correctly").isEqualTo(1);
+                    }
+                    default -> {
+                    }
                 }
             }
         }
